# mpd-notify

./: .gitignore  README.md  meson.build
include/: mpdnotify.h
src/: main.cpp  mpdasync.cpp  mpdnotify.cpp  song.cpp
